--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codelab-flutter-metronome",
   "version": "1.0.0",
-  "description": "## Pré-requis",
+  "description": "Projet hébergeant le contenu du codelab \"Développer une application Flutter\"",
   "main": "index.js",
   "scripts": {
     "deploy": "surge docs/ codelab-flutter-metronome.surge.sh",
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Zenika/codelab-flutter-metronome#readme",
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "serve": "^14.2.0"
   }
 }
